--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -1,18 +1,32 @@
 .topnav {
-    background-color: rgb(230, 201, 201);
+    background: #FFFFFF;
     overflow: hidden;
     padding-left: 10px;
+    width: 1440px;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .navsection{
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+padding-left: 101px;
+width: 234px;
+height: 56px;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #1D1F22;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 16px;
   }
   
   /* Add an active class to highlight the current page */
@@ -38,7 +52,7 @@
     font-size: 17px;
     border: none;
     outline: none;
-    color: white;
+    color: black;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
