--- a/src/Pages/Home/Products/Product.css
+++ b/src/Pages/Home/Products/Product.css
@@ -2,4 +2,6 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-gap: 5px;
+    margin-left: 101px;
+    margin-right: 101px;
 }
