--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -107,3 +107,14 @@ justify-content: center;
 text-align: center;
 
 }
+
+.total{
+    color: #1D1F22;
+    display: flex;
+    justify-content: space-between;
+}
+.imagecontainer{
+    margin-right: 8px;
+    width: 110px;
+height: 190px;
+}
