--- a/src/Pages/Home/Products/ClothDetails.css
+++ b/src/Pages/Home/Products/ClothDetails.css
@@ -2,9 +2,99 @@
     width: 1002px;
 height: 595px;
 margin-inline: 219px;
+display: flex;
+justify-content: space-between;
 }
 
 .detailsgroup{
     width: 292px;
 height: 595px;
+}
+.nametext{
+    width: 292px;
+height: 27px;
+
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 600;
+font-size: 30px;
+line-height: 27px;
+
+display: flex;
+align-items: center;
+
+color: #1D1F22;
+}
+.sizetag{
+    width: 38px;
+height: 18px;
+
+font-family: 'Roboto Condensed';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 18px;
+
+color: #1D1F22;
+}
+.brandtext{
+    width: 292px;
+height: 27px;
+
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 400;
+font-size: 30px;
+line-height: 27px;
+margin-bottom: 43px;
+color: #1D1F22;
+}
+.pricetext{
+    width: 50px;
+height: 18px;
+
+font-family: 'Roboto Condensed';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+
+color: #1D1F22;
+}
+.totalprice{
+    width: 86px;
+height: 46px;
+
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 18px;
+/* or 75% */
+
+display: flex;
+align-items: center;
+
+color: #1D1F22;
+}
+.cartbutton{
+    display: flex;
+flex-direction: column;
+align-items: center;
+padding: 16px 32px;
+margin-top: 20px;
+position: absolute;
+width: 292px;
+height: 52px;
+cursor: pointer;
+border: none;
+background: #5ECE7B;
+}
+.descriptiontext{
+    width: 292px;
+height: 103px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+color: #1D1F22;
 }
