--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -6,7 +6,9 @@
     height: 80px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
+
   .cartimage{
     width: 20px;
     height: 14px;
@@ -23,79 +25,32 @@ height: 56px;
   }
   
   /* Style the links inside the navigation bar */
-  .topnav a {
+ .linkText{
     float: left;
     display: block;
-    color: #1D1F22;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 16px;
+
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+
+display: flex;
+align-items: center;
+text-align: center;
+text-transform: uppercase;
+
+color: #1D1F22;
   }
   
   /* Add an active class to highlight the current page */
   .active {
-    background-color: #04AA6D;
-    color: white;
+    color: #5ECE7B;
   }
   
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }
-  
-  /* Dropdown container - needed to position the dropdown content */
-  .dropdown {
-    float: right;
-    overflow: hidden;
-    padding-right: 50px;
-  }
-  
-  /* Style the dropdown button to fit inside the topnav */
-  .dropdown .dropbtn {
-    font-size: 17px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  /* Style the dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Style the links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a dark background on topnav links and the dropdown button on hover */
-  .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #555;
-    color: white;
-  }
-  
-  /* Add a grey background to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Show the dropdown menu when the user moves the mouse over the dropdown button */
-  .dropdown:hover .dropdown-content {
-    display: block;
+  .actionbox{
+    display: flex;
+    width: 80px;
   }
