--- a/src/Pages/Home/Products/ClothDetails.css
+++ b/src/Pages/Home/Products/ClothDetails.css
@@ -1,3 +1,4 @@
+
 .clothcontainer{
     width: 1002px;
 height: 595px;
@@ -16,7 +17,6 @@ height: 27px;
 
 font-family: 'Raleway';
 font-style: normal;
-font-weight: 600;
 font-size: 30px;
 line-height: 27px;
 
@@ -31,7 +31,6 @@ height: 18px;
 
 font-family: 'Roboto Condensed';
 font-style: normal;
-font-weight: 700;
 font-size: 18px;
 line-height: 18px;
 
@@ -43,7 +42,6 @@ height: 27px;
 
 font-family: 'Raleway';
 font-style: normal;
-font-weight: 400;
 font-size: 30px;
 line-height: 27px;
 margin-bottom: 43px;
@@ -55,7 +53,6 @@ height: 18px;
 
 font-family: 'Roboto Condensed';
 font-style: normal;
-font-weight: 700;
 font-size: 18px;
 
 color: #1D1F22;
@@ -66,7 +63,6 @@ height: 46px;
 
 font-family: 'Raleway';
 font-style: normal;
-font-weight: 700;
 font-size: 24px;
 line-height: 18px;
 /* or 75% */
@@ -82,19 +78,17 @@ flex-direction: column;
 align-items: center;
 padding: 16px 32px;
 margin-top: 20px;
-position: absolute;
 width: 292px;
 height: 52px;
 cursor: pointer;
 border: none;
 background: #5ECE7B;
+margin-bottom: 40px;
 }
 .descriptiontext{
     width: 292px;
-height: 103px;
 font-family: 'Roboto';
 font-style: normal;
-font-weight: 400;
 font-size: 16px;
 color: #1D1F22;
 }
