--- a/src/Pages/Home/Products/Cloth.css
+++ b/src/Pages/Home/Products/Cloth.css
@@ -2,14 +2,28 @@
     width: 386px;
 height: 444px;
 padding: 16px;
+margin-bottom: 10px;
 background: #FFFFFF;
     box-shadow: 5px solid rgb(24, 23, 23);
 }
-
+.product:hover{
+    background: #FFFFFF;
+    transform: scale(1.1);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.outOfStock{
+    position:absolute;
+    bottom:50%;
+    right: 30%;
+    font-weight: 400;
+font-size: 28px;
+color: #8D8F9A;
+}
 img{
-    width: 356px;
+    width: 100%;
 height: 338px;
 margin-inline: auto;
+
 }
 .productname{
     font-family: 'Raleway';
@@ -23,6 +37,18 @@ align-items: center;
 
 color: #1D1F22;
 }
+.outProduct{
+    font-family: 'Raleway';
+font-style: normal;
+font-size: 18px;
+
+display: flex;
+align-items: center;
+
+/* --c-black */
+
+color: #8D8F9A;
+}
 .pricearea{
     font-family: 'Raleway';
 font-style: normal;
@@ -30,6 +56,14 @@ font-weight: 500;
 font-size: 18px;
 
 color: #1D1F22;
+}
+.outpricearea{
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+
+color: #8D8F9A;
 }
 .textarea{
     width: 354px;
