--- a/src/Pages/Home/Products/Product.css
+++ b/src/Pages/Home/Products/Product.css
@@ -5,3 +5,12 @@
     margin-left: 101px;
     margin-right: 101px;
 }
+.categoryName{
+    margin-left:101px;
+    text-transform: uppercase;
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 400;
+font-size: 42px;
+margin-bottom: 87px;
+}
