--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -1,12 +1,6 @@
-.cartcontainer{
-    width: 325px;
-height: 677px;
-background: #FFFFFF;
-}
+
 
 .itemcontainer{
-    width: 293px;
-height: 538px;
 margin-top: 32px;
 margin-bottom: 32px;
 margin-left: 16px;
@@ -14,7 +8,7 @@ margin-right: 16px;
 }
 .totalitem{
     color: #1D1F22;
-    width: 118px;
+    
 height: 26px;
 font-weight: 700;
 font-size: 16px;
@@ -22,11 +16,9 @@ margin-bottom: 32px;
 }
 .itembox{
     width: 293px;
-height: 420px;
 }
 .singleitem{
     width: 293px;
-height: 190px;
 margin-bottom: 32px;
 display: flex;
 }
@@ -113,8 +105,9 @@ text-align: center;
     display: flex;
     justify-content: space-between;
     margin-top: 34px;
+    margin-bottom: 32px;
 }
-.imagecontainer{
+.imagediv{
     margin-right: 8px;
     width: 110px;
 height: 190px;
@@ -131,7 +124,10 @@ margin-inline: auto;
 .bagbutton{
     width: 140px;
 height: 33px;
-    
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #FFFFFF;
     border: 1px solid #1D1F22;
 text-transform: uppercase;
@@ -146,7 +142,10 @@ color: #1D1F22;
 .checkoutbutton{
     width: 140px;
     height: 33px;
-    
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #5ECE7B;
     border: 1px solid #1D1F22;
 text-transform: uppercase;
