--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -1,112 +1,79 @@
 .topnav {
-    background: #FFFFFF;
-    overflow: hidden;
-    padding-left: 10px;
-    width: 1440px;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+  background: #FFFFFF;
+  overflow: hidden;
+  padding-left: 10px;
+  width: 1440px;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .cartimage{
-    width: 20px;
-    height: 14px;
-  }
+.cartimage {
+  width: 20px;
+  height: 14px;
+}
 
-  .navsection{
-    display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 0px;
-padding-left: 101px;
-width: 234px;
-height: 56px;
-  }
-  
-  /* Style the links inside the navigation bar */
- .linkText{
-    float: left;
-    display: block;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+.navsection {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  padding-left: 101px;
 
-    font-family: 'Raleway';
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
+}
 
-display: flex;
-align-items: center;
-text-align: center;
-text-transform: uppercase;
+.linkText {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 
-color: #1D1F22;
-  }
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #1D1F22;
+}
+
+.active {
+  color: #5ECE7B;
+}
+
+.actionbox {
+  display: flex;
+}
+
+.modal {
+  z-index: 50;
+    position: fixed;
+  top: 80px;
   
-  /* Add an active class to highlight the current page */
-  .active {
-    color: #5ECE7B;
-  }
-  .actionbox{
-    display: flex;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }
-  
-  /* Dropdown container - needed to position the dropdown content */
-  .dropdown {
-    float: right;
-    overflow: hidden;
-    padding-right: 50px;
-  }
-  
-  /* Style the dropdown button to fit inside the topnav */
-  .dropdown .dropbtn {
-    font-size: 17px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  /* Style the dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Style the links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a dark background on topnav links and the dropdown button on hover */
-  
-  
-  /* Add a grey background to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Show the dropdown menu when the user moves the mouse over the dropdown button */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background:  rgba(57, 55, 72, 0.22);
+}
+
+.modal-main {
+  position: fixed;
+  background: #FFFFFF;
+  right: 82px;
+  top: 78px;
+  width: 325px;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
