--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -2,7 +2,6 @@
   background: #FFFFFF;
   overflow: hidden;
   padding-left: 10px;
-  width: 1440px;
   height: 80px;
   display: flex;
   justify-content: space-between;
@@ -45,10 +44,12 @@
 
 .active {
   color: #5ECE7B;
+  border-bottom: 2px solid #5ECE7B;
 }
 
 .actionbox {
   display: flex;
+  margin-right: 101px;
 }
 
 .modal {
@@ -61,6 +62,33 @@
   height: 100%;
   background:  rgba(57, 55, 72, 0.22);
 }
+.modalCurrency {
+  z-index: 50;
+    position: fixed;
+  top: 80px;
+  
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.currencyAction{
+  background: #FFFFFF;
+   border: none;
+   cursor: pointer ;
+   font-family: 'Raleway';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+/* identical to box height, or 29px */
+width: 12px;
+display: flex;
+align-items: flex-end;
+
+
+/* --c-black */
+
+color: #1D1F22;
+}
 
 .modal-main {
   position: fixed;
@@ -68,6 +96,12 @@
   right: 82px;
   top: 78px;
   width: 325px;
+}
+.Currencymodal-main {
+  position: fixed;
+  background: #FFFFFF;
+  width: 114px;
+left: 1248px;
 }
 
 .display-block {
