--- a/src/Pages/Home/Products/Product.css
+++ b/src/Pages/Home/Products/Product.css
@@ -7,6 +7,7 @@
 }
 .categoryName{
     margin-left:101px;
+    margin-top: 80px;
     text-transform: uppercase;
     font-family: 'Raleway';
 font-style: normal;
