price functionality added

--- a/src/Pages/currency/Currencies.css
+++ b/src/Pages/currency/Currencies.css
@@ -1,7 +1,9 @@
 .currencycontainer{
     padding-top:20px;
     background: #FFFFFF;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+
 .singlecurrency{
     width: 114px;
 height: 45px;
