--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -5,6 +5,7 @@ margin-bottom: 16px;
 margin-left: 16px;
 margin-right: 16px;
 }
+
 .totalitem{
     color: #1D1F22;
     
@@ -105,6 +106,10 @@ text-align: center;
     justify-content: space-between;
     margin-top: 34px;
     margin-bottom: 32px;
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
 }
 .imagediv{
     margin-right: 8px;
