--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -56,16 +56,17 @@
   z-index: 50;
     position: fixed;
   top: 80px;
-  
   left: 0;
+  overflow: scroll;
   width: 100%;
   height: 100%;
   background:  rgba(57, 55, 72, 0.22);
+  
 }
 .modalCurrency {
   z-index: 50;
     position: fixed;
-  
+    
   left: 0;
   width: 100%;
   height: 100%;
@@ -96,6 +97,7 @@ color: #1D1F22;
   top: 78px;
   width: 325px;
 }
+
 .Currencymodal-main {
   position: fixed;
   background: #FFFFFF;
@@ -109,4 +111,17 @@ left: 1248px;
 
 .display-none {
   display: none;
+}
+.icon-button__badge {
+  position: absolute;
+  top: 10px;
+  right: 95px;
+  width: 20px;
+  height: 20px;
+  background: #1D1F22;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
