--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -124,6 +124,7 @@ gap: 12px;
 display: flex;
 justify-content: space-between;
 margin-inline: auto;
+margin-bottom: 32px;
 }
 .bagbutton{
     width: 140px;
@@ -153,6 +154,6 @@ color: #1D1F22;
     background: #5ECE7B;
     border: 1px solid #1D1F22;
 text-transform: uppercase;
-
+cursor: pointer;
 color: #1D1F22;
 }
