--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -28,7 +28,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-
+  cursor: pointer;
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 600;
@@ -57,7 +57,6 @@
     position: fixed;
   top: 80px;
   left: 0;
-  overflow: scroll;
   width: 100%;
   height: 100%;
   background:  rgba(57, 55, 72, 0.22);
@@ -95,7 +94,10 @@ color: #1D1F22;
   background: #FFFFFF;
   right: 82px;
   top: 78px;
-  width: 325px;
+  width: 335px;
+  
+  overflow: scroll;
+  max-height: 677px;
 }
 
 .Currencymodal-main {
