--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -3,7 +3,7 @@
 .itemcontainer{
 margin-bottom: 16px;
 margin-left: 16px;
-margin-right: 16px;
+margin-right: 4px;
 }
 
 .totalitem{
@@ -14,32 +14,28 @@ font-weight: 700;
 font-size: 16px;
 margin-bottom: 16px;
 }
-.itembox{
-    width: 293px;
-}
+
 .singleitem{
-    width: 293px;
 margin-bottom: 32px;
 display: flex;
 }
 .buttonarea{
     width: 24px;
-height: 190px;
+height: 210px;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
 align-items: center;
+margin-left: 4px;
 }
 .itemdetails{
-    width: 164px;
 height: 190px;
 display: flex;
 margin-right: 8px;
 }
 .itemtext{
-    width: 136px;
-height: 190px;
-
+    width: 146px;
+height: 210px;
 }
 .nameprice{
     width: 136px;
@@ -61,29 +57,25 @@ font-weight: 500;
 font-size: 16px;
 }
 .title{
-    width: 30px;
 height: 16px;
-
 font-family: 'Raleway';
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 16px;
-
+margin-bottom: 8px;
 color: #1D1F22;
 }
 .sizeframe{
     display: flex;
 padding: 0px;
-gap: 8px;
 flex-direction: row;
 align-items: flex-start;
 width: 120px;
 height: 24px;
-margin-top: 8px;
 }
 .sizevalue{
-    width: 24px;
+    width: 34px;
 height: 24px;
 color: #1D1F22;
 background: rgba(255, 255, 255, 0.2);
