--- a/src/Pages/Home/Products/Cloth.css
+++ b/src/Pages/Home/Products/Cloth.css
@@ -78,7 +78,14 @@ color: #8D8F9A;
 .textarea{
     width: 354px;
 height: 29px;
-color: #8D8F9A;
+color: #FFFFFF;
 font-weight: 300;
 font-size: 18px;
+}
+.outofStocktextarea{
+    width: 354px;
+    height: 29px;
+    color: #8D8F9A;
+    font-weight: 300;
+    font-size: 18px; 
 }
