outside click modal off done

--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -79,7 +79,8 @@ font-style: normal;
 font-weight: 500;
 font-size: 18px;
 /* identical to box height, or 29px */
-width: 12px;
+width: 26px;
+padding-right: 8px;
 display: flex;
 align-items: flex-end;
 
