--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -104,7 +104,7 @@ font-style: normal;
 font-weight: 700;
 font-size: 16px;
 }
-.imagediv{
+.cartImage img{
     margin-right: 8px;
     width: 110px;
 height: 190px;
