--- a/src/Pages/Home/Products/ClothDetails.css
+++ b/src/Pages/Home/Products/ClothDetails.css
@@ -14,6 +14,13 @@ justify-content: space-evenly
   flex-direction: column;
   margin-right: 50px;
 }
+.detailsPic img{
+    margin-bottom:32px;
+    cursor:pointer
+}
+.attribute{
+    margin-bottom: 24px;
+}
 .productImage{
     height:500px;
     margin-right:50px
