--- a/src/Pages/Cart/Cartdetails.css
+++ b/src/Pages/Cart/Cartdetails.css
@@ -28,8 +28,7 @@ color: #1D1F22;
     margin-bottom: 200px;
 }
 .imagecontainer{
-   width: 200px;
-   height: 288px;
+   margin-left: 24px
 }
 .carttext{
     font-family: 'Raleway';
@@ -46,7 +45,6 @@ color: #1D1F22;
 }
 .container{
     display: flex;
-    height: 288px;
     margin-bottom: 25px;
 }
 .line{
@@ -149,6 +147,12 @@ gap: 16px;
 
 position: absolute;
 height: 159px;
+}
+.plusMinusButton img{
+    height: 45px;
+ width: 45px;
+ border:  1px solid #1D1F22;
+ cursor: pointer 
 }
 .changeimage{
     display: flex;
