--- a/src/Pages/Home/Products/ClothDetails.css
+++ b/src/Pages/Home/Products/ClothDetails.css
@@ -1,6 +1,5 @@
 
 .clothcontainer{
-height: 595px;
 margin-left: 96px;
 margin-right: 19px;
 margin-top: 50px;
@@ -16,13 +15,16 @@ justify-content: space-evenly
 }
 .detailsPic img{
     margin-bottom:32px;
-    cursor:pointer
+    cursor:pointer;
+    height: 100px;
+    width: 100px;
 }
 .attribute{
     margin-bottom: 24px;
 }
 .productImage{
-    margin-right:50px
+    margin-right:50px;
+    max-width: 480px;
 }
 .detailsgroup{
     width: 292px;
