currency dropdown ficed

--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -37,7 +37,7 @@ height: 210px;
     width: 136px;
 height: 82px;
 }
-.productname{
+.cartproductname{
     width: 136px;
 height: 52px;
 color: #1D1F22;
