--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -127,7 +127,7 @@ color: #1D1F22;
   position: fixed;
   background: #FFFFFF;
   width: 114px;
-left: 1248px;
+  right: 82px;
 }
 
 .display-block {
