done with category and product page

--- a/src/Pages/Cart/Cartdetails.css
+++ b/src/Pages/Cart/Cartdetails.css
@@ -28,8 +28,9 @@ color: #1D1F22;
     margin-bottom: 200px;
 }
 .imagecontainer{
-   margin-left: 24px
+   margin-left: 24px;
 }
+
 .carttext{
     font-family: 'Raleway';
 font-style: normal;
