--- a/src/Pages/Home/Products/Cloth.css
+++ b/src/Pages/Home/Products/Cloth.css
@@ -4,23 +4,26 @@ margin-bottom: 30px;
 background: #FFFFFF;
     box-shadow: 5px solid rgb(24, 23, 23);
 }
+.imageOfProduct{
+    max-height: 330px;
+margin-inline: auto;
+}
 .cartButton{
     background: #5ECE7B;
-     height: 41px; 
-    width: 41px;
+     height: 52px; 
+    width: 52px;
     cursor: pointer;
     border-radius: 50%;
     position: absolute;
     right: 32px;
-    bottom: 165px;
+    bottom: 135px;
     display: none;
 }
 .cartButton img{
     height: 24px;
      width: 24px;
-     display: flex;
-     justify-content: center;
-     padding-top: 7px
+     padding-top: 14px;
+     padding-left: 13px;
 }
 
 .product:hover {
@@ -96,4 +99,5 @@ font-size: 18px;
 }
 .outofstockImage {
     opacity: 0.2;
+max-height: 330px;
 }
