--- a/src/Pages/Cart/Cartdetails.css
+++ b/src/Pages/Cart/Cartdetails.css
@@ -23,173 +23,211 @@ font-size: 30px;
 line-height: 27px;
 color: #1D1F22;
 } */
-.cartcontainer{
+.cartcontainer {
     margin-inline: 100px;
     margin-bottom: 200px;
 }
-.imagecontainer{
-   margin-left: 24px;
+
+.imagecontainer {
+    margin-left: 24px;
 }
 
-.carttext{
+.carttext {
     font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-line-height: 40px;
-margin-bottom: 55px;
-/* identical to box height, or 125% */
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 40px;
+    margin-bottom: 55px;
+    /* identical to box height, or 125% */
 
-text-transform: uppercase;
+    text-transform: uppercase;
 
-color: #1D1F22;
+    color: #1D1F22;
 }
-.container{
+
+.container {
     display: flex;
     margin-bottom: 25px;
 }
-.line{
+
+.line {
     height: 1px;
     background: #E5E5E5;
-    margin-bottom: 12px;  
+    margin-bottom: 12px;
 }
-.details{
-    width:950px;
+
+.details {
+    width: 950px;
 }
-.detailscontainer{
+
+.detailscontainer {
     display: flex;
     width: 1000px;
 }
-.nametag{
+
+.nametag {
     font-family: 'Raleway';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-margin-bottom: 20px;
-color: #1D1F22;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: #1D1F22;
 }
-.pricetag{
+
+.pricetag {
     font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-color: #1D1F22;
-margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    color: #1D1F22;
+    margin-bottom: 20px;
 }
-.sizetext{
+
+.sizetext {
     font-family: 'Roboto Condensed';
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-    
+
     color: #1D1F22
 }
-.valuetag{
+
+.valuetag {
     display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 0px;
-gap: 8px;
-margin-bottom: 2px;
-width: 276px;
-height: 45px;
-}
-.valuearea{
-    box-sizing: border-box;
-width: 63px;
-height: 45px;
-background: #FFFFFF;
-border: 1px solid #1D1F22;
-font-family: 'Source Sans Pro';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 18px;
-cursor: pointer;
-display: flex;
-align-items: center;
-justify-content: center;
-letter-spacing: 0.05em;
-}
-.colorarea{
-    box-sizing: border-box;
-width: 32px;
-height: 32px;
-cursor: pointer;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+    margin-bottom: 2px;
+    width: 276px;
+    height: 45px;
 }
 
-.buttongroup{
-    width: 45px;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-align-items: center;
+.valuearea {
+    box-sizing: border-box;
+    width: 63px;
+    height: 45px;
+    background: #FFFFFF;
+    border: 1px solid #1D1F22;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 0.05em;
 }
-.leftRightArea{
+.addedvaluearea {
+    box-sizing: border-box;
+    width: 63px;
+    height: 45px;
+    background: #1D1F22;
+    color: #FFFFFF;
+    border: 1px solid #1D1F22;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 0.05em;
+}
+
+.colorarea {
+    box-sizing: border-box;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    color:#FFFFFF 
+}
+
+.buttongroup {
+    width: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.leftRightArea {
     display: flex;
     column-gap: 5px;
     position: absolute;
-    bottom:30%;
+    bottom: 30%;
     right: 10%;
 }
-.leftImage{
+
+.leftImage {
     background-color: #000000;
     height: 24px;
     width: 24px;
-    
+
 }
-.taxarea{
+
+.taxarea {
     font-family: 'Raleway';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 28px;
-gap: 8px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    gap: 8px;
 
-height: 100px;
+    height: 100px;
 
-color: #1D1F22;
+    color: #1D1F22;
 }
-.totalarea{
+
+.totalarea {
     display: flex;
-flex-direction: column;
-align-items: flex-start;
-padding: 0px;
-gap: 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 16px;
 
-position: absolute;
-height: 159px;
+    position: absolute;
+    height: 159px;
 }
-.plusMinusButton img{
+
+.plusMinusButton img {
     height: 45px;
- width: 45px;
- border:  1px solid #1D1F22;
- cursor: pointer 
+    width: 45px;
+    border: 1px solid #1D1F22;
+    cursor: pointer
 }
-.changeimage{
+
+.changeimage {
     display: flex;
     position: absolute;
     right: 175px;
     bottom: 25px;
 }
-.orderbutton{
-    display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 16px 32px;
 
-width: 279px;
-height: 43px;
-cursor: pointer;
-background: #5ECE7B;
+.orderbutton {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 32px;
+
+    width: 279px;
+    height: 43px;
+    cursor: pointer;
+    background: #5ECE7B;
 }
-.ordertext{
+
+.ordertext {
     color: #FFFFFF;
     text-transform: uppercase;
     font-family: 'Raleway';
-font-style: normal;
-font-weight: 600;
-font-size: 14px;
-line-height: 17px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
 }
