--- a/src/Pages/Home/Products/ClothDetails.css
+++ b/src/Pages/Home/Products/ClothDetails.css
@@ -1,113 +1,165 @@
+.clothsvaluearea {
+    box-sizing: border-box;
+    width: 63px;
+    height: 45px;
+    background: #FFFFFF;
+    border: 1px solid #1D1F22;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 0.05em;
+}
+.clothvaluearea {
+    box-sizing: border-box;
+    width: 63px;
+    height: 45px;
+    background: #1D1F22;
+    color: #FFFFFF;
+    border: 1px solid #1D1F22;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 0.05em;
+}
 
-.clothcontainer{
-margin-left: 96px;
-margin-right: 19px;
-margin-top: 50px;
-display: flex;
-justify-content: space-evenly
+.clothcontainer {
+    margin-left: 96px;
+    margin-right: 19px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly
 }
-.imageContainer{
+.colorarea {
+    box-sizing: border-box;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+}
+
+.imageContainer {
     overflow: scroll;
-  max-height: 677px;
-  display: flex;
-  flex-direction: column;
-  margin-right: 50px;
+    max-height: 677px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 50px;
 }
-.detailsPic img{
-    margin-bottom:32px;
+
+.detailsPic img {
+    margin-bottom: 32px;
     margin-right: 10px;
-    cursor:pointer;
+    cursor: pointer;
     max-height: 677px;
 }
-.attribute{
+
+.attribute {
     margin-bottom: 24px;
 }
 
-.detailsgroup{
+.detailsgroup {
     width: 292px;
-height: 595px;
-margin-left: 50px;
+    height: 595px;
+    margin-left: 50px;
 }
-.nametext{
+
+.nametext {
     width: 292px;
-height: 27px;
+    height: 27px;
 
-font-family: 'Raleway';
-font-style: normal;
-font-size: 30px;
-line-height: 27px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-size: 30px;
+    line-height: 27px;
 
-display: flex;
-align-items: center;
-
-color: #1D1F22;
-}
-.sizetag{
-    width: 38px;
-height: 18px;
-
-font-family: 'Roboto Condensed';
-font-style: normal;
-font-size: 18px;
-line-height: 18px;
-
-color: #1D1F22;
-}
-.brandtext{
-    width: 292px;
-height: 27px;
-
-font-family: 'Raleway';
-font-style: normal;
-font-size: 30px;
-line-height: 27px;
-margin-bottom: 43px;
-color: #1D1F22;
-}
-.pricetext{
-    width: 50px;
-height: 18px;
-
-font-family: 'Roboto Condensed';
-font-style: normal;
-font-size: 18px;
-
-color: #1D1F22;
-}
-.totalprice{
-height: 46px;
-
-font-family: 'Raleway';
-font-style: normal;
-font-size: 24px;
-line-height: 18px;
-/* or 75% */
-
-display: flex;
-align-items: center;
-
-color: #1D1F22;
-}
-.cartbutton{
     display: flex;
-flex-direction: column;
-align-items: center;
-padding: 16px 32px;
-margin-top: 20px;
-width: 292px;
-height: 52px;
-cursor: pointer;
-border: none;
-background: #5ECE7B;
-margin-bottom: 40px;
+    align-items: center;
+
+    color: #1D1F22;
 }
-.descriptiontext{
+
+.sizetag {
+    width: 38px;
+    height: 18px;
+
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-size: 18px;
+    line-height: 18px;
+
+    color: #1D1F22;
+}
+
+.brandtext {
     width: 292px;
-font-family: 'Roboto';
-font-style: normal;
-font-size: 16px;
-color: #1D1F22;
+    height: 27px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-size: 30px;
+    line-height: 27px;
+    margin-bottom: 43px;
+    color: #1D1F22;
 }
-.productImage{
+
+.pricetext {
+    width: 50px;
+    height: 18px;
+
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-size: 18px;
+
+    color: #1D1F22;
+}
+
+.totalprice {
+    height: 46px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-size: 24px;
+    line-height: 18px;
+    /* or 75% */
+
+    display: flex;
+    align-items: center;
+
+    color: #1D1F22;
+}
+
+.cartbutton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px 32px;
+    margin-top: 20px;
+    width: 292px;
+    height: 52px;
+    cursor: pointer;
+    border: none;
+    background: #5ECE7B;
+    margin-bottom: 40px;
+}
+
+.descriptiontext {
+    width: 292px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 16px;
+    color: #1D1F22;
+}
+
+.productImage {
     max-height: 677px;
 }
