--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -5,6 +5,24 @@ margin-bottom: 16px;
 margin-left: 16px;
 margin-right: 4px;
 }
+.buttonactive {
+    float: left;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+  
+    display: flex;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: #5ECE7B;
+    border-bottom: 2px solid #5ECE7B;
+  }
 
 .totalitem{
     color: #1D1F22;
@@ -24,7 +42,7 @@ display: flex;
 flex-direction: column;
 justify-content: space-between;
 align-items: center;
-margin-left: 4px;
+margin-right: 10px;
 }
 .itemdetails{
 display: flex;
@@ -36,6 +54,10 @@ height: 210px;
 .nameprice{
     width: 136px;
 height: 82px;
+}
+.cartimage {
+    height:100%;
+    width:100px;
 }
 .cartproductname{
     width: 136px;
