--- a/src/Pages/Home/Header.css
+++ b/src/Pages/Home/Header.css
@@ -8,10 +8,7 @@
   align-items: center;
 }
 
-.cartimage {
-  width: 20px;
-  height: 14px;
-}
+
 
 .navsection {
   display: flex;
@@ -40,7 +37,7 @@
   border: none; 
   cursor: pointer
 }
-.cartArea img{
+.cartButtonImg{
   height: 20px;
    width: 25px 
 }
