--- a/src/Pages/Home/Products/ClothDetails.css
+++ b/src/Pages/Home/Products/ClothDetails.css
@@ -51,6 +51,16 @@
     cursor: pointer;
     color: #FFFFFF;
     background: var(--my-variable-name);
+    border:1px solid #1D1F22 ;
+}
+.activecolorarea {
+    box-sizing: border-box;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    color: #FFFFFF;
+    background: var(--my-variable-name);
+    border: 1px solid #5ECE7B;
 }
 
 .imageContainer {
